--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 </body>
 <footer>
     <script src="Ejercicio1.js"></script>
+    <script src="Ejercicio2.js"></script>
+    <script src="Ejercicio3.js"></script>
     <script src="main.js"></script>
 </footer>
 
