--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <script src="Ejercicio1.js"></script>
     <script src="Ejercicio2.js"></script>
     <script src="Ejercicio3.js"></script>
+    <script src="Ejercicio4.js"></script>
     <script src="main.js"></script>
 </footer>
 
