--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
     <script src="Ejercicio2.js"></script>
     <script src="Ejercicio3.js"></script>
     <script src="Ejercicio4.js"></script>
+    <script src="Ejercicio5.js"></script>
+    <script src="Ejercicio6.js"></script>
     <script src="main.js"></script>
 </footer>
 
