--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <script src="Ejercicio4.js"></script>
     <script src="Ejercicio5.js"></script>
     <script src="Ejercicio6.js"></script>
+    <script src="Ejercicio7.js"></script>
     <script src="main.js"></script>
 </footer>
 
