--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <script src="Ejercicio5.js"></script>
     <script src="Ejercicio6.js"></script>
     <script src="Ejercicio7.js"></script>
+    <script src="Ejercicio8.js"></script>
     <script src="main.js"></script>
 </footer>
 
