--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <script src="Ejercicio6.js"></script>
     <script src="Ejercicio7.js"></script>
     <script src="Ejercicio8.js"></script>
+    <script src="Ejercicio9.js"></script>
     <script src="main.js"></script>
 </footer>
 
