--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <script src="Ejercicio7.js"></script>
     <script src="Ejercicio8.js"></script>
     <script src="Ejercicio9.js"></script>
+    <script src="Ejercicio10_Extra.js"></script>
     <script src="main.js"></script>
 </footer>
 
